2012-02-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/xnu.c (grub_xnu_boot): Fix format specification.

2012-02-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Bump to 2.00~beta0.

2012-02-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/getroot.c (grub_find_root_devices_from_btrfs): Add
	missing initialisation.

2012-02-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/partmap/msdos.c (message_warn): Clarify messages.

2012-02-27  Vladimir Serbinenko  <phcoder@gmail.com>

	Support v2 xnu boot arguments.

	* grub-core/loader/i386/xnu.c (grub_cpu_xnu_fill_devicetree):
	New argument fsbfreq_out.
	(grub_xnu_set_video): Receive an argument grub_xnu_boot_params_common.
	(grub_xnu_boot): Support v2 arguments. Disable PIC so that APIC can
	be used.
	* grub-core/loader/machoXX.c (grub_macho_load): New argument
	darwin_version.
	* grub-core/loader/xnu.c (grub_xnu_darwin_version): New variable.
	* include/grub/i386/xnu.h (grub_xnu_boot_params_common): New struct.
	(grub_xnu_boot_params): Rename to ...
	(grub_xnu_boot_params_v1): ...this. Use grub_xnu_boot_params_common.
	(grub_xnu_boot_params_v2): New struct.

2012-02-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/efiemu/prepare.c (grub_efiemu_crc): Add missing
	zeroing of CRC field before computing CRC.

2012-02-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/relocator.c (malloc_in_range): Fix memory leak.
	Change order of allocations to decrease fragmentation.

2012-02-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* Makefile.util.def (grub-ofpathname): Enable on all platforms.

2012-02-27  Colin Watson  <cjwatson@ubuntu.com>

	Use write-combining MTRR to speed up video with buggy BIOSes.

	* grub-core/video/i386/pc/vbe.c (framebuffer): New member mtrr.
	(cpuid): New define.
	(rdmsr): Likewise.
	(wrmsr): Likewise.
	(mtrr_base): Likewise.
	(mtrr_mask): Likewise.
	(grub_vbe_enable_mtrr_entry): New function.
	(grub_vbe_enable_mtrr): Likewise.