@@ -1,5 +1,10 @@
 2012-02-27  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/term/i386/pc/vga_text.c: Add GRUB_MACHINE_MULTIBOOT to
+	grub_vga_text_init/grub_vga_text_fini.
+
+2012-02-27  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/loader/i386/xnu.c (grub_xnu_boot): Fix format specification.
 
 2012-02-27  Vladimir Serbinenko  <phcoder@gmail.com>
